tests/disabled/reaches/neg/localReaches.check
-- Error: tests/neg/localReaches.scala:24:30 ---------------------------------------------------------------------------
24 |  var x: () ->{xs*} Unit = ys.head // error
   |                           ^^^^^^^
   |                           Local reach capability ops* leaks into capture scope of method localReach3.
   |                           You could try to abstract the capabilities referred to by ops* in a capset variable.
-- Error: tests/neg/localReaches.scala:27:11 ---------------------------------------------------------------------------
27 |    x = ys.head  // error
   |        ^^^^^^^
   |        Local reach capability ops* leaks into capture scope of method localReach3.
   |        You could try to abstract the capabilities referred to by ops* in a capset variable.
